--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   "author": "ericson.padol@asurion.com",
   "license": "GNU",
   "devDependencies": {
-    "eslint": "^7.2.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "gulp": "^4.0.2",
     "gulp-apidoc": "^0.2.8",
     "husky": "^4.2.5",
@@ -41,12 +41,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "blademonkey-data-entities": "^1.0.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
+    "faker": "^4.1.0",
     "gravatar": "^1.8.1",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
